--- a/da/index.html
+++ b/da/index.html
@@ -1,9 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="da">
 <head>
-  <meta http-equiv="refresh" content="0; url=/Florel/da/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Florel Fiskeri — Feriehus ved kysten (Dansk)</title>
+  <meta name="description" content="Florel Fiskeri — hyggeligt kystferiehus i Danmark. Perfekt til familier og lystfiskere.">
+  <link rel="stylesheet" href="../assets/style.css">
+
+  <!-- Canonical & alternates -->
+  <link rel="canonical" href="https://platzdk.github.io/Florel/da/">
+  <link rel="alternate" hreflang="da" href="https://platzdk.github.io/Florel/da/">
+  <link rel="alternate" hreflang="en" href="https://platzdk.github.io/Florel/en/">
+  <link rel="alternate" hreflang="de" href="https://platzdk.github.io/Florel/de/">
+  <link rel="alternate" hreflang="x-default" href="https://platzdk.github.io/Florel/">
 </head>
 <body>
-  <p>Redirecting...</p>
+  <div class="page">
+    <header>
+      <h1>Florel Fiskeri</h1>
+      <p class="tagline">Hyggeligt feriehus ved kysten — perfekt til familier og lystfiskere</p>
+    </header>
+
+    <main>
+      <nav aria-label="Sprogvalg" class="language-selector">
+        <ul>
+          <li><a href="../" aria-label="Tilbage til sprogvalgsiden">🏠 Forside</a></li>
+          <li><a href="../en/" aria-label="English">🇬🇧 English</a></li>
+          <li><a href="../de/" aria-label="Deutsch">🇩🇪 Deutsch</a></li>
+        </ul>
+      </nav>
+
+      <article>
+        <h2>Velkommen</h2>
+        <p>Velkommen til Florel Fiskeri — vores sommerhus ved kysten. Her finder I information om leje, faciliteter og gode fiskesteder i nærheden.</p>
+        <!-- Tilføj dit egentlige indhold her -->
+      </article>
+    </main>
+
+    <footer>
+      <p>© Florel Fiskeri</p>
+    </footer>
+  </div>
+
+  <script src="../assets/script.js" defer></script>
 </body>
 </html>
