--- a/en/index.html
+++ b/en/index.html
@@ -1,9 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url=/Florel/en/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Florel Fiskeri — Coastal Summer House (English)</title>
+  <meta name="description" content="Florel Fiskeri — cosy coastal summer house in Denmark. Ideal for families and anglers.">
+  <link rel="stylesheet" href="../assets/style.css">
+
+  <!-- Canonical & alternates -->
+  <link rel="canonical" href="https://platzdk.github.io/Florel/en/">
+  <link rel="alternate" hreflang="da" href="https://platzdk.github.io/Florel/da/">
+  <link rel="alternate" hreflang="en" href="https://platzdk.github.io/Florel/en/">
+  <link rel="alternate" hreflang="de" href="https://platzdk.github.io/Florel/de/">
+  <link rel="alternate" hreflang="x-default" href="https://platzdk.github.io/Florel/">
 </head>
 <body>
-  <p>Redirecting...</p>
+  <div class="page">
+    <header>
+      <h1>Florel Fiskeri</h1>
+      <p class="tagline">Coastal summer house — perfect for families and fishing enthusiasts</p>
+    </header>
+
+    <main>
+      <nav aria-label="Language selector" class="language-selector">
+        <ul>
+          <li><a href="../" aria-label="Back to language selector">🏠 Home</a></li>
+          <li><a href="../da/" aria-label="Dansk">🇩🇰 Dansk</a></li>
+          <li><a href="../de/" aria-label="Deutsch">🇩🇪 Deutsch</a></li>
+        </ul>
+      </nav>
+
+      <article>
+        <h2>Welcome</h2>
+        <p>Welcome to Florel Fiskeri — our coastal summer house. Here you can find rental info, facilities and good fishing spots nearby.</p>
+        <!-- Add your actual content here -->
+      </article>
+    </main>
+
+    <footer>
+      <p>© Florel Fiskeri</p>
+    </footer>
+  </div>
+
+  <script src="../assets/script.js" defer></script>
 </body>
 </html>
