--- a/de/index.html
+++ b/de/index.html
@@ -1,9 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-  <meta http-equiv="refresh" content="0; url=/Florel/de/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Florel Fiskeri — Ferienhaus an der Küste (Deutsch)</title>
+  <meta name="description" content="Florel Fiskeri — gemütliches Ferienhaus an der Küste in Dänemark. Ideal für Familien und Angler.">
+  <link rel="stylesheet" href="../assets/style.css">
+
+  <!-- Canonical & alternates -->
+  <link rel="canonical" href="https://platzdk.github.io/Florel/de/">
+  <link rel="alternate" hreflang="da" href="https://platzdk.github.io/Florel/da/">
+  <link rel="alternate" hreflang="en" href="https://platzdk.github.io/Florel/en/">
+  <link rel="alternate" hreflang="de" href="https://platzdk.github.io/Florel/de/">
+  <link rel="alternate" hreflang="x-default" href="https://platzdk.github.io/Florel/">
 </head>
 <body>
-  <p>Redirecting...</p>
+  <div class="page">
+    <header>
+      <h1>Florel Fiskeri</h1>
+      <p class="tagline">Ferienhaus an der Küste — perfekt für Familien und Angler</p>
+    </header>
+
+    <main>
+      <nav aria-label="Sprachauswahl" class="language-selector">
+        <ul>
+          <li><a href="../" aria-label="Zurück zur Sprachauswahl">🏠 Startseite</a></li>
+          <li><a href="../da/" aria-label="Dansk">🇩🇰 Dansk</a></li>
+          <li><a href="../en/" aria-label="English">🇬🇧 English</a></li>
+        </ul>
+      </nav>
+
+      <article>
+        <h2>Willkommen</h2>
+        <p>Willkommen bei Florel Fiskeri — unserem Ferienhaus an der Küste. Hier finden Sie Informationen zur Vermietung, Ausstattung und zu guten Angelplätzen in der Nähe.</p>
+        <!-- Ergänzen Sie hier den eigentlichen Inhalt -->
+      </article>
+    </main>
+
+    <footer>
+      <p>© Florel Fiskeri</p>
+    </footer>
+  </div>
+
+  <script src="../assets/script.js" defer></script>
 </body>
 </html>
