--- a/en/index.html
+++ b/en/index.html
@@ -18,7 +18,7 @@
   <div class="page">
     <header>
       <h1>Florel Fiskeri</h1>
-      <p class="tagline">Coastal summer house — perfect for families and fishing enthusiasts</p>
+      <p>Forest cabin by lake and stream. Enjoy peaceful nature and excellent fishing — put & take lakes, rivers and coastal spots all within easy reach.</p>
     </header>
 
     <main>
