--- a/de/index.html
+++ b/de/index.html
@@ -18,7 +18,7 @@
   <div class="page">
     <header>
       <h1>Florel Fiskeri</h1>
-      <p class="tagline">Ferienhaus an der Küste — perfekt für Familien und Angler</p>
+      <p>Ferienhaus mitten im Wald mit See- und Bachzugang. Genießen Sie Ruhe in der Natur und hervorragende Angelmöglichkeiten — Put & Take, Seen, Küsten‑ und Flussangeln in kurzer Entfernung.</p>
     </header>
 
     <main>
