--- a/index.html
+++ b/index.html
@@ -1,13 +1,59 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Complete Multilingual Coastal Rental Website</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Florel Fiskeri</title>
+  <link rel="stylesheet" href="./assets/style.css" />
+</head>
+<body>
+  <header class="site-header">
+    <div class="container">
+      <h1 class="logo">Florel Fiskeri</h1>
+      <nav class="language-switcher">
+        <a href="./da/index.html">Dansk</a> • <a href="./en/index.html">English</a> • <a href="./de/index.html">Deutsch</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="hero-inner container">
+        <h2>Florel Fishing Retreat</h2>
+        <p class="tagline">Forest cabin by lake and stream. Enjoy peaceful nature and excellent fishing — put & take lakes, rivers and coastal spots all within easy reach.</p>
+        <p class="cta"><a class="btn btn-primary" href="./da/index.html">Choose your language / Vælg sprog</a></p>
+      </div>
+    </section>
+
+    <section id="overview" class="section container">
+      <h2>Welcome</h2>
+      <p>Florel is a cosy forest cabin offering direct access to a lake and a nearby stream — perfect for families and fishing enthusiasts. Explore local spots, rent gear or book a guide.</p>
+    </section>
+
+    <section id="activities" class="section container">
+      <h2>Fishing activities</h2>
+      <p>Denmark offers varied angling: coastal and sea fishing, river and lake fishing, and put & take ponds.</p>
+      <ul>
+        <li>Coastal fishing for sea trout, garfish and mackerel (spring / late summer / autumn).</li>
+        <li>Lake fishing: pike, perch, zander, trout and eel.</li>
+        <li>River fishing in clear streams — local day permits often required.</li>
+        <li>Put & take: family-friendly and usually open daily.</li>
+        <li>Boat, kayak or belly-boat angling where permitted.</li>
+      </ul>
+    </section>
+
+    <section id="practical" class="section container">
+      <h2>Practical info</h2>
+      <p>Boat & kayak rentals, tackle shops and local guides are available nearby. Contact us for help with day tickets and guide bookings.</p>
+      <p><a class="btn" href="mailto:info@example.com">Send reservation enquiry</a></p>
+    </section>
+  </main>
+
+  <footer class="site-footer container">
+    <div class="footer-links">
+      <a href="./da/fiskeri.html">Local fishing spots</a> • <a href="./da/fiskeri.html">Practical info</a>
+    </div>
+    <p>© Florel Fiskeri</p>
+  </footer>
+</body>
 </html>
