--- a/da/index.html
+++ b/da/index.html
@@ -1,47 +1,72 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="da">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Florel Fiskeri — Feriehus ved kysten (Dansk)</title>
-  <meta name="description" content="Florel Fiskeri — hyggeligt kystferiehus i Danmark. Perfekt til familier og lystfiskere.">
-  <link rel="stylesheet" href="../assets/style.css">
-
-  <!-- Canonical & alternates -->
-  <link rel="canonical" href="https://platzdk.github.io/Florel/da/">
-  <link rel="alternate" hreflang="da" href="https://platzdk.github.io/Florel/da/">
-  <link rel="alternate" hreflang="en" href="https://platzdk.github.io/Florel/en/">
-  <link rel="alternate" hreflang="de" href="https://platzdk.github.io/Florel/de/">
-  <link rel="alternate" hreflang="x-default" href="https://platzdk.github.io/Florel/">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Florel Fiskeri — Dansk</title>
+  <link rel="stylesheet" href="../assets/style.css" />
 </head>
 <body>
-  <div class="page">
-    <header>
-      <h1>Florel Fiskeri</h1>
-      <p class="tagline">Hyggeligt feriehus ved kysten — perfekt til familier og lystfiskere</p>
-    </header>
-
-    <main>
-      <nav aria-label="Sprogvalg" class="language-selector">
-        <ul>
-          <li><a href="../" aria-label="Tilbage til sprogvalgsiden">🏠 Forside</a></li>
-          <li><a href="../en/" aria-label="English">🇬🇧 English</a></li>
-          <li><a href="../de/" aria-label="Deutsch">🇩🇪 Deutsch</a></li>
-        </ul>
+  <header class="site-header">
+    <div class="container">
+      <h1 class="logo">Florel Fiskeri</h1>
+      <nav class="language-switcher">
+        <a href="../index.html">Home</a> • <a href="../en/index.html">English</a> • <a href="../de/index.html">Deutsch</a>
       </nav>
+    </div>
+  </header>
 
-      <article>
-        <h2>Velkommen</h2>
-        <p>Velkommen til Florel Fiskeri — vores sommerhus ved kysten. Her finder I information om leje, faciliteter og gode fiskesteder i nærheden.</p>
-        <!-- Tilføj dit egentlige indhold her -->
-      </article>
-    </main>
+  <main>
+    <section class="hero">
+      <div class="hero-inner container">
+        <h2>Florel Fiskeri</h2>
+        <p class="tagline">Sommerhus midt i skoven ved sø og å. Oplev afslappende naturoplevelser og fantastiske muligheder for lystfiskeri — fra put & take og søfiskeri til kyst- og åfiskeri inden for kort rækkevidde.</p>
+        <p class="cta"><a class="btn btn-primary" href="mailto:info@example.com">Send reservationsforespørgsel</a></p>
+      </div>
+    </section>
 
-    <footer>
-      <p>© Florel Fiskeri</p>
-    </footer>
-  </div>
+    <section id="aktiviteter" class="section container">
+      <h2>Aktiviteter for lystfiskere</h2>
+      <p>Danmark byder på alsidige fiskemuligheder: kyst- og havfiskeri, å- og søfiskeri samt put & take-søer.</p>
+      <ul>
+        <li>Kystfiskeri efter havørred, hornfisk og makrel (forår / sensommer / efterår).</li>
+        <li>Søfiskeri: gedde, aborre, sandart, søørred og ål.</li>
+        <li>Åfiskeri i klare strømmende åer (havørred, bækørred) — dagkort påkrævet.</li>
+        <li>Put & take: familievenligt, åbent dagligt, ofte uden nationalt fisketegn.</li>
+        <li>Bådfiskeri, kajak eller belly-boat, hvor tilladt.</li>
+      </ul>
+    </section>
 
-  <script src="../assets/script.js" defer></script>
+    <section id="fiskesteder" class="section container">
+      <h2>Lokale fiskesteder</h2>
+      <ul>
+        <li><strong>Bølling Sø</strong> (≈2 km): frit fiskeri fra land; gedde, aborre; shelters og kano/robåd adgang.</li>
+        <li><strong>Skyggehale Put & Take</strong> (≈5 km): familievenligt, toilet og rensebord; ørredudsætning.</li>
+        <li><strong>Silkeborgsøerne / Langsø (Gudenå)</strong> (≈15 km): store søer, gedde/aborre/sandart/ørred (dagkort).</li>
+        <li><strong>Tollundgaard Put & Take (Pårup)</strong> (≈10 km): klassisk put & take.</li>
+        <li><strong>Karup Å</strong> (≈30 km): elvefiskeri kendt for store havørreder — dagkort.</li>
+        <li><strong>Hjarbæk Fjord (Limfjorden)</strong> (≈55 km): fjord- og kystfiskeri (havørred, hornfisk).</li>
+      </ul>
+      <p><a class="btn" href="fiskeri.html">Læs mere om lokale spots</a></p>
+    </section>
+
+    <section id="praktisk" class="section container">
+      <h2>Praktisk info, guides & grej</h2>
+      <p>Der findes båd- og kajakudlejning i nærheden, samt lokale grejbutikker. Book en lokal guide for at få de bedste stræk og teknikker. Kontakt os for hjælp til dagkort eller guide.</p>
+    </section>
+
+    <section class="section booking container">
+      <h2>Reservér dit ophold</h2>
+      <p>Vil I kombinere afslapning og fiskeri? Book opholdet her — og husk: til ferskvands- og særlige å-stræk kræves ofte både statsligt fisketegn og lokalt dagkort. Kontakt os for hjælp til dagkort eller formidling af guide.</p>
+      <p><a class="btn btn-primary" href="mailto:info@example.com">Send reservationsforespørgsel</a></p>
+    </section>
+  </main>
+
+  <footer class="site-footer container">
+    <div class="footer-links">
+      <a href="fiskeri.html">Fiskesteder</a> • <a href="fiskeri.html#praktisk">Praktisk info</a>
+    </div>
+    <p>© Florel Fiskeri</p>
+  </footer>
 </body>
 </html>
