--- a/en/index.html
+++ b/en/index.html
@@ -1,47 +1,72 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Florel Fiskeri — Coastal Summer House (English)</title>
-  <meta name="description" content="Florel Fiskeri — cosy coastal summer house in Denmark. Ideal for families and anglers.">
-  <link rel="stylesheet" href="../assets/style.css">
-
-  <!-- Canonical & alternates -->
-  <link rel="canonical" href="https://platzdk.github.io/Florel/en/">
-  <link rel="alternate" hreflang="da" href="https://platzdk.github.io/Florel/da/">
-  <link rel="alternate" hreflang="en" href="https://platzdk.github.io/Florel/en/">
-  <link rel="alternate" hreflang="de" href="https://platzdk.github.io/Florel/de/">
-  <link rel="alternate" hreflang="x-default" href="https://platzdk.github.io/Florel/">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Florel Fishing Retreat — English</title>
+  <link rel="stylesheet" href="../assets/style.css" />
 </head>
 <body>
-  <div class="page">
-    <header>
-      <h1>Florel Fiskeri</h1>
-      <p>Forest cabin by lake and stream. Enjoy peaceful nature and excellent fishing — put & take lakes, rivers and coastal spots all within easy reach.</p>
-    </header>
-
-    <main>
-      <nav aria-label="Language selector" class="language-selector">
-        <ul>
-          <li><a href="../" aria-label="Back to language selector">🏠 Home</a></li>
-          <li><a href="../da/" aria-label="Dansk">🇩🇰 Dansk</a></li>
-          <li><a href="../de/" aria-label="Deutsch">🇩🇪 Deutsch</a></li>
-        </ul>
+  <header class="site-header">
+    <div class="container">
+      <h1 class="logo">Florel Fishing</h1>
+      <nav class="language-switcher">
+        <a href="../index.html">Home</a> • <a href="../da/index.html">Dansk</a> • <a href="../de/index.html">Deutsch</a>
       </nav>
+    </div>
+  </header>
 
-      <article>
-        <h2>Welcome</h2>
-        <p>Welcome to Florel Fiskeri — our coastal summer house. Here you can find rental info, facilities and good fishing spots nearby.</p>
-        <!-- Add your actual content here -->
-      </article>
-    </main>
+  <main>
+    <section class="hero">
+      <div class="hero-inner container">
+        <h2>Florel Fishing Retreat</h2>
+        <p class="tagline">Forest cabin by lake and stream. Enjoy peaceful nature and excellent fishing — put & take lakes, rivers and coastal spots all within easy reach.</p>
+        <p class="cta"><a class="btn btn-primary" href="mailto:info@example.com">Send reservation enquiry</a></p>
+      </div>
+    </section>
 
-    <footer>
-      <p>© Florel Fiskeri</p>
-    </footer>
-  </div>
+    <section id="activities" class="section container">
+      <h2>Fishing activities</h2>
+      <p>Denmark offers varied angling: coastal and sea fishing, river and lake fishing, and put & take ponds.</p>
+      <ul>
+        <li>Coastal fishing for sea trout, garfish and mackerel (spring / late summer / autumn).</li>
+        <li>Lake fishing: pike, perch, zander, trout and eel.</li>
+        <li>River fishing in clear streams — local day permits often required.</li>
+        <li>Put & take ponds: family-friendly and usually open daily.</li>
+        <li>Boat, kayak or belly-boat angling where permitted.</li>
+      </ul>
+    </section>
 
-  <script src="../assets/script.js" defer></script>
+    <section id="local-spots" class="section container">
+      <h2>Local fishing spots</h2>
+      <ul>
+        <li><strong>Bølling Lake</strong> (≈2 km): free shore fishing; pike, perch; shelters and canoe/rowboat access.</li>
+        <li><strong>Skyggehale Put & Take</strong> (≈5 km): family-friendly; toilets and cleaning tables; regularly stocked trout.</li>
+        <li><strong>Silkeborg Lakes / Langsø (Gudenå)</strong> (≈15 km): large lakes; pike, perch, zander, trout (license + day-ticket).</li>
+        <li><strong>Tollundgaard Put & Take (Pårup)</strong> (≈10 km): classic put & take pond.</li>
+        <li><strong>Karup River</strong> (≈30 km): river angling famed for sea trout — local permits required.</li>
+        <li><strong>Hjarbæk Fjord (Limfjord)</strong> (≈55 km): fjord/coastal fishing for sea trout and garfish.</li>
+      </ul>
+      <p><a class="btn" href="fishing.html">Read more about local spots</a></p>
+    </section>
+
+    <section id="practical" class="section container">
+      <h2>Practical info & guides</h2>
+      <p>Boat and kayak rentals and tackle shops are available in the area. Book a local fishing guide for the best stretches and techniques. Contact us for help with day tickets or guide booking.</p>
+    </section>
+
+    <section class="section booking container">
+      <h2>Ready to book?</h2>
+      <p>Want restful nature and great fishing? Book your stay here — note: for many freshwater waters and some river stretches you need both the national fishing license and local day permits. Contact us for help with day tickets or guide booking.</p>
+      <p><a class="btn btn-primary" href="mailto:info@example.com">Send reservation enquiry</a></p>
+    </section>
+  </main>
+
+  <footer class="site-footer container">
+    <div class="footer-links">
+      <a href="fishing.html">Local fishing spots</a> • <a href="fishing.html#practical">Practical info</a>
+    </div>
+    <p>© Florel Fishing</p>
+  </footer>
 </body>
 </html>
