--- a/de/index.html
+++ b/de/index.html
@@ -1,17 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Florel Fishing Retreat — English</title>
+  <title>Florel — Deutsch</title>
   <link rel="stylesheet" href="../assets/style.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container">
-      <h1 class="logo">Florel Fishing</h1>
+      <h1 class="logo">Florel Angeln</h1>
       <nav class="language-switcher">
-        <a href="../index.html">Home</a> • <a href="../da/index.html">Dansk</a> • <a href="../de/index.html">Deutsch</a>
+        <a href="../index.html">Home</a> • <a href="../da/index.html">Dansk</a> • <a href="../en/index.html">English</a>
       </nav>
     </div>
   </header>
@@ -19,54 +19,49 @@
   <main>
     <section class="hero">
       <div class="hero-inner container">
-        <h2>Florel Fishing Retreat</h2>
-        <p class="tagline">Forest cabin by lake and stream. Enjoy peaceful nature and excellent fishing — put & take lakes, rivers and coastal spots all within easy reach.</p>
-        <p class="cta"><a class="btn btn-primary" href="mailto:info@example.com">Send reservation enquiry</a></p>
+        <h2>Florel Angler-Retreat</h2>
+        <p class="tagline">Ferienhaus mitten im Wald mit See- und Bachzugang. Genießen Sie Ruhe in der Natur und hervorragende Angelmöglichkeiten — Put & Take, Seen und Fluss- sowie Küstenstellen sind in kurzer Entfernung.</p>
+        <p class="cta"><a class="btn btn-primary" href="mailto:info@example.com">Anfrage zur Reservierung senden</a></p>
       </div>
     </section>
 
-    <section id="activities" class="section container">
-      <h2>Fishing activities</h2>
-      <p>Denmark offers varied angling: coastal and sea fishing, river and lake fishing, and put & take ponds.</p>
+    <section id="aktivitaeten" class="section container">
+      <h2>Angelaktivitäten</h2>
+      <p>Dänemark bietet vielfältige Angelmöglichkeiten: Küsten- und Meeresangeln, Fluss- und Seenangeln sowie Put & Take-Gewässer.</p>
       <ul>
-        <li>Coastal fishing for sea trout, garfish and mackerel (spring / late summer / autumn).</li>
-        <li>Lake fishing: pike, perch, zander, trout and eel.</li>
-        <li>River fishing in clear streams — local day permits often required.</li>
-        <li>Put & take ponds: family-friendly and usually open daily.</li>
-        <li>Boat, kayak or belly-boat angling where permitted.</li>
+        <li>Küstenangeln nach Meerforelle, Hornfisch und Makrele (Frühling / Spätsommer / Herbst).</li>
+        <li>Seenangeln: Hecht, Barsch, Zander, Forelle und Aal.</li>
+        <li>Flussangeln in klaren Strömen — häufig Tageskarten erforderlich.</li>
+        <li>Put & Take: familienfreundlich, meist täglich geöffnet.</li>
+        <li>Boots- oder Kajakangeln, wo erlaubt.</li>
       </ul>
     </section>
 
-    <section id="local-spots" class="section container">
-      <h2>Local fishing spots</h2>
+    <section id="orte" class="section container">
+      <h2>Lokale Angelplätze</h2>
       <ul>
-        <li><strong>Bølling Lake</strong> (≈2 km): free shore fishing; pike, perch; shelters and canoe/rowboat access.</li>
-        <li><strong>Skyggehale Put & Take</strong> (≈5 km): family-friendly; toilets and cleaning tables; regularly stocked trout.</li>
-        <li><strong>Silkeborg Lakes / Langsø (Gudenå)</strong> (≈15 km): large lakes; pike, perch, zander, trout (license + day-ticket).</li>
-        <li><strong>Tollundgaard Put & Take (Pårup)</strong> (≈10 km): classic put & take pond.</li>
-        <li><strong>Karup River</strong> (≈30 km): river angling famed for sea trout — local permits required.</li>
-        <li><strong>Hjarbæk Fjord (Limfjord)</strong> (≈55 km): fjord/coastal fishing for sea trout and garfish.</li>
+        <li><strong>Bølling See</strong> (≈2 km): freies Uferangeln; Hecht, Barsch; Shelters und Kanuzugang.</li>
+        <li><strong>Skyggehale Put & Take</strong> (≈5 km): familienfreundlich; Toiletten und Reinigungsplätze.</li>
+        <li><strong>Silkeborg-Seen / Langsø (Gudenå)</strong> (≈15 km): große Seen; Hecht, Barsch, Zander, Forelle (Tageskarte).</li>
+        <li><strong>Tollundgaard Put & Take (Pårup)</strong> (≈10 km): traditioneller Put & Take-See.</li>
+        <li><strong>Karup Å</strong> (≈30 km): Flussangeln, bekannt für Meerforellen — Tageskarten erforderlich.</li>
+        <li><strong>Hjarbæk Fjord (Limfjorden)</strong> (≈55 km): Fjord-/Küstenangeln (Meerforelle, Hornfisch).</li>
       </ul>
-      <p><a class="btn" href="fishing.html">Read more about local spots</a></p>
-    </section>
-
-    <section id="practical" class="section container">
-      <h2>Practical info & guides</h2>
-      <p>Boat and kayak rentals and tackle shops are available in the area. Book a local fishing guide for the best stretches and techniques. Contact us for help with day tickets or guide booking.</p>
+      <p><a class="btn" href="fischen.html">Mehr zu lokalen Plätzen</a></p>
     </section>
 
     <section class="section booking container">
-      <h2>Ready to book?</h2>
-      <p>Want restful nature and great fishing? Book your stay here — note: for many freshwater waters and some river stretches you need both the national fishing license and local day permits. Contact us for help with day tickets or guide booking.</p>
-      <p><a class="btn btn-primary" href="mailto:info@example.com">Send reservation enquiry</a></p>
+      <h2>Buchen</h2>
+      <p>Möchten Sie Ruhe in der Natur und erstklassiges Angeln? Buchen Sie hier — beachten Sie: für viele Süßwassergewässer und Flussabschnitte benötigen Sie einen staatlichen Angelschein und lokale Tageskarten. Kontaktieren Sie uns für Unterstützung bei Tageskarten oder Guide-Buchungen.</p>
+      <p><a class="btn btn-primary" href="mailto:info@example.com">Anfrage senden</a></p>
     </section>
   </main>
 
   <footer class="site-footer container">
     <div class="footer-links">
-      <a href="fishing.html">Local fishing spots</a> • <a href="fishing.html#practical">Practical info</a>
+      <a href="fischen.html">Angelplätze</a> • <a href="fischen.html#practical">Praktische Infos</a>
     </div>
-    <p>© Florel Fishing</p>
+    <p>© Florel</p>
   </footer>
 </body>
 </html>
