Improve header menu styling

--- a/de/index.html
+++ b/de/index.html
@@ -11,7 +11,9 @@
     <div class="container">
       <h1 class="logo">Florel Angeln</h1>
       <nav class="language-switcher">
-        <a href="../index.html">Home</a> • <a href="../da/index.html">Dansk</a> • <a href="../en/index.html">English</a>
+        <a href="../index.html">Home</a>
+        <a href="../da/index.html">Dansk</a>
+        <a href="../en/index.html">English</a>
       </nav>
     </div>
   </header>
@@ -59,7 +61,8 @@
 
   <footer class="site-footer container">
     <div class="footer-links">
-      <a href="fischen.html">Angelplätze</a> • <a href="fischen.html#practical">Praktische Infos</a>
+      <a href="fischen.html">Angelplätze</a>
+      <a href="fischen.html#practical">Praktische Infos</a>
     </div>
     <p>© Florel</p>
   </footer>
