--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <div class="container">
       <h1 class="logo">Florel Fiskeri</h1>
       <nav class="language-switcher">
-        <a href="./da/index.html">Dansk</a> • <a href="./en/index.html">English</a> • <a href="./de/index.html">Deutsch</a>
+        <a href="./da/index.html">Dansk</a>
+        <a href="./en/index.html">English</a>
+        <a href="./de/index.html">Deutsch</a>
       </nav>
     </div>
   </header>
@@ -51,7 +53,8 @@
 
   <footer class="site-footer container">
     <div class="footer-links">
-      <a href="./da/fiskeri.html">Local fishing spots</a> • <a href="./da/fiskeri.html">Practical info</a>
+      <a href="./da/fiskeri.html">Local fishing spots</a>
+      <a href="./da/fiskeri.html">Practical info</a>
     </div>
     <p>© Florel Fiskeri</p>
   </footer>
