--- a/da/fiskeri.html
+++ b/da/fiskeri.html
@@ -10,7 +10,10 @@
   <header class="site-header">
     <div class="container">
       <h1 class="logo">Florel Fiskeri — Fiskesteder</h1>
-      <nav><a href="index.html">Tilbage</a> • <a href="../index.html">Home</a></nav>
+      <nav>
+        <a href="index.html">Tilbage</a>
+        <a href="../index.html">Home</a>
+      </nav>
     </div>
   </header>
 
