--- a/da/index.html
+++ b/da/index.html
@@ -11,7 +11,9 @@
     <div class="container">
       <h1 class="logo">Florel Fiskeri</h1>
       <nav class="language-switcher">
-        <a href="../index.html">Home</a> • <a href="../en/index.html">English</a> • <a href="../de/index.html">Deutsch</a>
+        <a href="../index.html">Home</a>
+        <a href="../en/index.html">English</a>
+        <a href="../de/index.html">Deutsch</a>
       </nav>
     </div>
   </header>
@@ -64,7 +66,8 @@
 
   <footer class="site-footer container">
     <div class="footer-links">
-      <a href="fiskeri.html">Fiskesteder</a> • <a href="fiskeri.html#praktisk">Praktisk info</a>
+      <a href="fiskeri.html">Fiskesteder</a>
+      <a href="fiskeri.html#praktisk">Praktisk info</a>
     </div>
     <p>© Florel Fiskeri</p>
   </footer>
