--- a/de/fischen.html
+++ b/de/fischen.html
@@ -10,7 +10,10 @@
   <header class="site-header">
     <div class="container">
       <h1 class="logo">Florel — Angelplätze</h1>
-      <nav><a href="index.html">Zurück</a> • <a href="../index.html">Home</a></nav>
+      <nav>
+        <a href="index.html">Zurück</a>
+        <a href="../index.html">Home</a>
+      </nav>
     </div>
   </header>
 
