--- a/en/fishing.html
+++ b/en/fishing.html
@@ -10,7 +10,10 @@
   <header class="site-header">
     <div class="container">
       <h1 class="logo">Florel — Fishing spots</h1>
-      <nav><a href="index.html">Back</a> • <a href="../index.html">Home</a></nav>
+      <nav>
+        <a href="index.html">Back</a>
+        <a href="../index.html">Home</a>
+      </nav>
     </div>
   </header>
 
