--- a/en/index.html
+++ b/en/index.html
@@ -11,7 +11,9 @@
     <div class="container">
       <h1 class="logo">Florel Fishing</h1>
       <nav class="language-switcher">
-        <a href="../index.html">Home</a> • <a href="../da/index.html">Dansk</a> • <a href="../de/index.html">Deutsch</a>
+        <a href="../index.html">Home</a>
+        <a href="../da/index.html">Dansk</a>
+        <a href="../de/index.html">Deutsch</a>
       </nav>
     </div>
   </header>
@@ -64,7 +66,8 @@
 
   <footer class="site-footer container">
     <div class="footer-links">
-      <a href="fishing.html">Local fishing spots</a> • <a href="fishing.html#practical">Practical info</a>
+      <a href="fishing.html">Local fishing spots</a>
+      <a href="fishing.html#practical">Practical info</a>
     </div>
     <p>© Florel Fishing</p>
   </footer>
