Test navigation for About section

--- a/da/index.html
+++ b/da/index.html
@@ -27,6 +27,11 @@
       </div>
     </section>
 
+    <section id="about-house" class="section container">
+      <h2>Om huset</h2>
+      <p>Det hyggelige træsommerhus har stue med brændeovn, fuldt udstyret køkken og to soverum med plads til fire gæster. Der er bad med varmt vand og en stor terrasse med udsigt til sø og skov.</p>
+    </section>
+
     <section id="aktiviteter" class="section container">
       <h2>Aktiviteter for lystfiskere</h2>
       <p>Danmark byder på alsidige fiskemuligheder: kyst- og havfiskeri, å- og søfiskeri samt put & take-søer.</p>
