--- a/de/index.html
+++ b/de/index.html
@@ -27,6 +27,11 @@
       </div>
     </section>
 
+    <section id="about-house" class="section container">
+      <h2>Über das Haus</h2>
+      <p>Die gemütliche Holzhütte bietet ein Wohnzimmer mit Kaminofen, eine komplett ausgestattete Küche und zwei Schlafzimmer für vier Gäste. Das Bad verfügt über Warmwasserdusche und die große Terrasse blickt auf See und Wald.</p>
+    </section>
+
     <section id="aktivitaeten" class="section container">
       <h2>Angelaktivitäten</h2>
       <p>Dänemark bietet vielfältige Angelmöglichkeiten: Küsten- und Meeresangeln, Fluss- und Seenangeln sowie Put & Take-Gewässer.</p>
