--- a/en/index.html
+++ b/en/index.html
@@ -27,6 +27,11 @@
       </div>
     </section>
 
+    <section id="about-house" class="section container">
+      <h2>About the house</h2>
+      <p>The cosy wooden cabin includes a living room with wood stove, a fully equipped kitchen and two bedrooms sleeping four guests. The bathroom has hot water and the large terrace overlooks the lake and forest.</p>
+    </section>
+
     <section id="activities" class="section container">
       <h2>Fishing activities</h2>
       <p>Denmark offers varied angling: coastal and sea fishing, river and lake fishing, and put & take ponds.</p>
