feat: link about-house from main pages

--- a/en/index.html
+++ b/en/index.html
@@ -15,6 +15,9 @@
         <a href="../da/index.html">Dansk</a>
         <a href="../de/index.html">Deutsch</a>
       </nav>
+      <nav class="page-nav" aria-label="Section navigation">
+        <a href="#about-house">About the house</a>
+      </nav>
     </div>
   </header>
 
