--- a/da/index.html
+++ b/da/index.html
@@ -15,6 +15,9 @@
         <a href="../en/index.html">English</a>
         <a href="../de/index.html">Deutsch</a>
       </nav>
+      <nav class="page-nav" aria-label="Section navigation">
+        <a href="#about-house">Om huset</a>
+      </nav>
     </div>
   </header>
 
