--- a/de/index.html
+++ b/de/index.html
@@ -15,6 +15,9 @@
         <a href="../da/index.html">Dansk</a>
         <a href="../en/index.html">English</a>
       </nav>
+      <nav class="page-nav" aria-label="Section navigation">
+        <a href="#about-house">Über das Haus</a>
+      </nav>
     </div>
   </header>
 
