--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     <section class="relative h-screen flex items-center justify-center overflow-hidden bg-forest">
         <!-- Background Image with Overlay -->
         <div class="absolute inset-0 z-0">
-            <img src="https://images.unsplash.com/photo-1473448912268-2022ce9509d8?q=80&w=2000&auto=format&fit=crop"
+            <img id="hero-image"
+                src="https://images.unsplash.com/photo-1473448912268-2022ce9509d8?q=80&w=2000&auto=format&fit=crop"
                 alt="Forest Lake"
                 class="w-full h-full object-cover opacity-50 scale-105 animate-[pulse_10s_ease-in-out_infinite] transition-transform duration-[20s] hover:scale-100 mix-blend-overlay">
         </div>
@@ -139,38 +140,10 @@
             <span class="text-xs tracking-[0.2em] text-rust hidden md:block">01 — ATMOSPHERE</span>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-12 gap-4 px-4 h-auto">
-            <!-- Large Hero Item -->
-            <div class="md:col-span-8 relative aspect-[16/9] group overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1600210492493-0946911123ea?q=80&w=1600&auto=format&fit=crop"
-                    class="w-full h-full object-cover transition duration-700 group-hover:scale-105 opacity-70 group-hover:opacity-100"
-                    alt="Living Room">
-                <div class="absolute bottom-6 left-6 opacity-0 group-hover:opacity-100 transition duration-500">
-                    <span class="text-xs font-bold tracking-widest uppercase bg-rust text-white px-3 py-1">Living
-                        Space</span>
-                </div>
-            </div>
-
-            <!-- Tall Item -->
-            <div class="md:col-span-4 relative aspect-[3/4] group overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1516937941348-c09e554b9631?q=80&w=800&auto=format&fit=crop"
-                    class="w-full h-full object-cover transition duration-700 group-hover:scale-105 opacity-70 group-hover:opacity-100"
-                    alt="Kitchen">
-                <div class="absolute bottom-6 left-6 opacity-0 group-hover:opacity-100 transition duration-500">
-                    <span
-                        class="text-xs font-bold tracking-widest uppercase bg-rust text-white px-3 py-1">Kitchen</span>
-                </div>
-            </div>
-
-            <!-- Wide Item -->
-            <div class="md:col-span-12 relative aspect-[21/9] group overflow-hidden">
-                <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?q=80&w=2000&auto=format&fit=crop"
-                    class="w-full h-full object-cover transition duration-700 group-hover:scale-105 opacity-60 group-hover:opacity-100"
-                    alt="River">
-                <div class="absolute bottom-6 left-6 opacity-0 group-hover:opacity-100 transition duration-500">
-                    <span class="text-xs font-bold tracking-widest uppercase bg-rust text-white px-3 py-1">The
-                        River</span>
-                </div>
+        <div id="gallery-grid" class="grid grid-cols-1 md:grid-cols-12 gap-4 px-4 h-auto min-h-[300px]">
+            <!-- Content will be loaded dynamically from gallery_data.json -->
+            <div class="md:col-span-12 text-center text-smoke py-20 italic">
+                Loading gallery...
             </div>
         </div>
     </section>
@@ -229,6 +202,79 @@
         </div>
     </footer>
 
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            fetch('gallery_data.json')
+                .then(r => r.json())
+                .then(data => {
+                    const container = document.getElementById('gallery-grid');
+                    if (!container) return;
+
+                    const images = [];
+                    // Map simplistic folder names to Nice Display Names
+                    const catMap = {
+                        'living_room': 'Living Space',
+                        'kitchen': 'Kitchen',
+                        'rooms': 'Rooms',
+                        'nature': 'Nature',
+                        'cover': 'Exterior'
+                    };
+
+                    // Handle Cover/Hero Image
+                    if (data.cover && data.cover.length > 0) {
+                        const heroImg = document.getElementById('hero-image');
+                        if (heroImg) heroImg.src = data.cover[0];
+                    }
+
+                    // Collect all images
+                    Object.entries(data).forEach(([key, imgs]) => {
+                        if (key === 'cover') return; // Skip cover in grid as it is used in header
+                        const displayCat = catMap[key] || key.charAt(0).toUpperCase() + key.slice(1);
+                        imgs.forEach(src => images.push({ src, category: displayCat }));
+                    });
+
+                    if (images.length === 0) {
+                        container.innerHTML = '<div class="md:col-span-12 text-center text-smoke py-20">No images found. Please add images to assets/images/gallery/</div>';
+                        return;
+                    }
+
+                    container.innerHTML = ''; // Clear loading message
+
+                    // Simple pattern for visual interest: 8 cols, 4 cols, 12 cols, repeat
+                    const pattern = ['md:col-span-8', 'md:col-span-4', 'md:col-span-12', 'md:col-span-4', 'md:col-span-8'];
+
+                    images.forEach((img, index) => {
+                        const spanClass = pattern[index % pattern.length];
+                        let aspectClass = 'aspect-[16/9]';
+                        if (spanClass === 'md:col-span-4') aspectClass = 'aspect-[3/4]';
+                        if (spanClass === 'md:col-span-12') aspectClass = 'aspect-[21/9]';
+
+                        const div = document.createElement('div');
+                        div.className = `${spanClass} relative ${aspectClass} group overflow-hidden bg-gray-900`;
+
+                        // Using encodeURI to ensure spaces/chars in filenames don't break
+                        const safeSrc = encodeURI(img.src);
+
+                        div.innerHTML = `
+                            <img src="${safeSrc}" 
+                                 class="w-full h-full object-cover transition duration-700 group-hover:scale-105 opacity-70 group-hover:opacity-100"
+                                 alt="${img.category}">
+                            <div class="absolute bottom-6 left-6 opacity-0 group-hover:opacity-100 transition duration-500">
+                                <span class="text-xs font-bold tracking-widest uppercase bg-rust text-white px-3 py-1">
+                                    ${img.category}
+                                </span>
+                            </div>
+                        `;
+                        container.appendChild(div);
+                    });
+                })
+                .catch(e => {
+                    console.error("Could not load gallery", e);
+                    const container = document.getElementById('gallery-grid');
+                    if (container) container.innerHTML = '<div class="md:col-span-12 text-center text-smoke py-20">Gallery unavailable.</div>';
+                });
+        });
+    </script>
 </body>
 
 </html>
