feat: Add new gallery images and enable 'Bathroom' category in index.html

--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                         'kitchen': 'Kitchen',
                         'rooms': 'Rooms',
                         'nature': 'Nature',
+                        'bathroom': 'Bathroom',
                         'cover': 'Exterior'
                     };
 
