--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             <h2 class="text-xs md:text-sm font-bold tracking-[0.3em] uppercase mb-6 text-copper">The Angler's Sanctuary
             </h2>
             <h1
-                class="text-5xl md:text-7xl lg:text-9xl font-extrabold tracking-tighter uppercase leading-none mb-8 text-sand">
-                Into the<br><span class="text-slate opacity-70">Deep</span>
+                class="text-4xl md:text-6xl lg:text-8xl font-extrabold tracking-tighter uppercase leading-none mb-8 text-sand">
+                The Karup Å<br><span class="text-slate opacity-70">Tributary Hideaway</span>
             </h1>
             <p class="max-w-xl mx-auto text-smoke text-sm md:text-base font-light leading-relaxed mb-12">
-                Where the river meets the roots. A modern hideaway designed for focus, silence, and the perfect cast.
+                Direct access to Skygge Å. Native Brown Trout & Sea Trout on location.<br>20 km to Silkeborg.
             </p>
         </div>
 
@@ -105,22 +105,51 @@
     <section id="about" class="scrolly-section relative bg-forest border-t border-white/5">
         <div class="max-w-7xl mx-auto px-6 grid md:grid-cols-2 gap-16 items-center">
             <div class="space-y-8">
-                <h3 class="text-4xl md:text-6xl font-bold uppercase tracking-tight leading-none text-sand">
-                    Rooted in<br><span class="text-rust">Nature</span>
+                <h3 class="text-4xl md:text-5xl font-bold uppercase tracking-tight leading-none text-sand mb-8">
+                    The <span class="text-rust">Stats</span>
                 </h3>
-                <p class="text-smoke text-sm md:text-base leading-relaxed max-w-md border-l border-rust/30 pl-6">
-                    Skovkrogen 37 blends calm earth tones with functional design.
-                    Inspired by the colors of the riverbed—slate, ochre, and deep green—it connects you directly to the
-                    environment you came to explore.
-                </p>
-                <div class="grid grid-cols-2 gap-8 pt-8">
-                    <div>
-                        <div class="text-3xl font-bold text-copper mb-2">12km</div>
-                        <div class="text-xs uppercase tracking-widest text-smoke">River Access</div>
+
+                <div class="grid grid-cols-1 gap-6">
+                    <!-- Vand -->
+                    <div class="border-l-2 border-slate/30 pl-4 hover:border-copper transition-colors duration-300">
+                        <div class="text-[10px] uppercase tracking-[0.2em] text-rust mb-1">Vand</div>
+                        <div class="text-sand text-base font-semibold">Skygge Å (Karup Å system) + Egen sø</div>
+                        <div class="text-smoke text-xs italic mt-1">Fiskeret på grunden</div>
                     </div>
-                    <div>
-                        <div class="text-3xl font-bold text-copper mb-2">100%</div>
-                        <div class="text-xs uppercase tracking-widest text-smoke">Privacy</div>
+
+                    <!-- Arter -->
+                    <div class="border-l-2 border-slate/30 pl-4 hover:border-copper transition-colors duration-300">
+                        <div class="text-[10px] uppercase tracking-[0.2em] text-rust mb-1">Arter</div>
+                        <div class="text-sand text-base font-semibold">Havørred, Bækørred</div>
+                        <div class="text-smoke text-xs italic mt-1">Seriøst fiskeri for den øvede</div>
+                    </div>
+
+                    <!-- Område -->
+                    <div class="border-l-2 border-slate/30 pl-4 hover:border-copper transition-colors duration-300">
+                        <div class="text-[10px] uppercase tracking-[0.2em] text-rust mb-1">Område</div>
+                        <div class="text-sand text-base font-semibold">10+ Put & Take søer &lt; 20 km</div>
+                        <div class="text-smoke text-xs italic mt-1">Perfekt til backup eller begyndere</div>
+                    </div>
+
+                    <!-- Tech -->
+                    <div class="border-l-2 border-slate/30 pl-4 hover:border-copper transition-colors duration-300">
+                        <div class="text-[10px] uppercase tracking-[0.2em] text-rust mb-1">Tech</div>
+                        <div class="text-sand text-base font-semibold">Ingen WiFi. Begrænset 4G</div>
+                        <div class="text-smoke text-xs italic mt-1">Medbring bøger, ikke PlayStation</div>
+                    </div>
+
+                    <!-- Sovepladser -->
+                    <div class="border-l-2 border-slate/30 pl-4 hover:border-copper transition-colors duration-300">
+                        <div class="text-[10px] uppercase tracking-[0.2em] text-rust mb-1">Sovepladser</div>
+                        <div class="text-sand text-base font-semibold">3 Værelser (2 senge pr. rum)</div>
+                        <div class="text-smoke text-xs italic mt-1">Ideelt til 4-6 voksne</div>
+                    </div>
+
+                    <!-- Lokation -->
+                    <div class="border-l-2 border-slate/30 pl-4 hover:border-copper transition-colors duration-300">
+                        <div class="text-[10px] uppercase tracking-[0.2em] text-rust mb-1">Lokation</div>
+                        <div class="text-sand text-base font-semibold">Isoleret i skov. 100% Ro.</div>
+                        <div class="text-smoke text-xs italic mt-1">Kræver bil</div>
                     </div>
                 </div>
             </div>
